--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20364,6 +20364,17 @@ a[class*=linkpanad]:focus {
   background: -webkit-linear-gradient(70deg, #fff810 30%, rgba(0, 0, 0, 0) 30%), -webkit-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
 }
 
+.panuseracctit {
+  font-family: "Bebas Neue";
+  font-size: 1.8em;
+  color: #3490dc;
+}
+
+.panuseraccsubtit {
+  font-family: "Bebas Neue";
+  font-size: 1.2em;
+}
+
 .fbcol {
   color: #3b5998;
 }
