--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -257,3 +257,14 @@ a[class*="linkpanad"]:focus {
 .usersox {
     background: -webkit-linear-gradient(70deg, #fff810 30%, rgba(0, 0, 0, 0) 30%), -webkit-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
 }
+
+.panuseracctit {
+    font-family: "Bebas Neue";
+    font-size: 1.8em;
+    color: $blue;
+}
+
+.panuseraccsubtit {
+    font-family: "Bebas Neue";
+    font-size: 1.2em;
+}
