--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -268,3 +268,8 @@ a[class*="linkpanad"]:focus {
     font-family: "Bebas Neue";
     font-size: 1.2em;
 }
+
+.panusdelic {
+    color: $sox2;
+    background-color: crimson;
+}
