--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -273,3 +273,9 @@ a[class*="linkpanad"]:focus {
     color: $sox2;
     background-color: crimson;
 }
+
+.shopcartpill {
+    position: relative;
+    left: -23.5px;
+    top: 10px;
+}
