--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -279,3 +279,19 @@ a[class*="linkpanad"]:focus {
     left: -27.5px;
     top: 5px;
 }
+
+.imgbag {
+    width: 8rem;
+    height: 10rem;
+}
+
+.pricebag {
+    max-height: 25rem;
+    background-color: lightgrey;
+}
+
+.bagborder {
+    border-top-style:solid;
+    border-top-width: 3px;
+    border-top-color: #343A40;
+}
