--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -325,3 +325,13 @@ a[class*="linkpanad"]:focus {
 .deleteicon:hover {
     color: darkgrey;
 }
+
+.shipmban {
+    background-color: #FF9F1C;
+}
+
+.buygift {
+    color: #227DC7;
+    font-family: "Bebas Neue";
+    font-size: 1.2em;
+}
