--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20401,6 +20401,13 @@ a[class*=linkpanad]:focus {
   height: 10rem;
 }
 
+.imgord {
+  width: 6rem;
+  height: 8rem;
+  -webkit-filter: grayscale(70%);
+          filter: grayscale(70%);
+}
+
 .pricebag {
   max-height: 25rem;
   background-color: lightgrey;
