--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -6,6 +6,7 @@ $body-bg: white;
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-family-bebas-neue: 'Bebas Neue';
 $font-family-gochi-hand: 'Gochi Hand';
+$font-family-open-sans: 'Open Sans';
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
