--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -99,6 +99,11 @@ img.card-img-top {
     height: 12rem;
 }
 
+.littlesox {
+    width: 6rem;
+    height: 9rem;
+}
+
 div.card.text-center.cardindex:hover {
     transform: scale(1.1);
     box-shadow: 2px 2px 10px rgba(52, 144, 220, 0.25);
