--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -356,3 +356,7 @@ a[class*="linkpanad"]:focus {
     font-family: $font-family-open-sans;
     font-size: 0.8em;
 }
+
+#found404:hover{
+    cursor: pointer;
+}
