--- a/resources/sass/colores.scss
+++ b/resources/sass/colores.scss
@@ -43,6 +43,14 @@
     -webkit-text-fill-color: transparent;
 }
 
+.shopcarticon {
+    color: $sox2;
+}
+
+.shopcarticon:hover {
+    color: #6c757d;
+}
+
 /*.panusernav {
     color: darkgrey;
 }*/
