--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20386,6 +20386,11 @@ a[class*=linkpanad]:focus {
 
 .usersox {
   background: -webkit-linear-gradient(70deg, #fff810 30%, rgba(0, 0, 0, 0) 30%), -webkit-linear-gradient(30deg, #63e89e 60%, #ff7ee3 60%);
+  min-height: 80vh;
+}
+
+.designer {
+  min-height: 63vh;
 }
 
 .panuseracctit {
@@ -20474,6 +20479,10 @@ a[class*=linkpanad]:focus {
 
 .mainfooter {
   background-color: #E9ECEF;
+}
+
+.jumbonav {
+  background: -webkit-linear-gradient(top, #343a40 0%, #ff7ee3 100%);
 }
 
 .fbcol {
