--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -378,3 +378,8 @@ a[class*="linkpanad"]:focus {
 .jumbonav {
     background: -webkit-linear-gradient(top, rgba(52,58,64,1) 0%, rgba(255,126,227,1) 100%);
 }
+
+#videosox {
+    /*width: 652px;
+    height: 380px;*/
+}
