--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -380,6 +380,6 @@ a[class*="linkpanad"]:focus {
 }
 
 #videosox {
-    /*width: 652px;
-    height: 380px;*/
+    width: 100% !important;
+    height: auto !important;
 }
